--- a/experimental_procedure.tex
+++ b/experimental_procedure.tex
@@ -7,7 +7,7 @@ comparisons between a synthesized dynamic texture and its target.
 Users were asked to choose which texture appeared more realistic
 after viewing each texture independently for an exposure time (in seconds) 
 sampled randomly from the set \{0.3, 0.4, 0.6, 1.2, 2.4, 3.6, 4.8\}.
-Note that 12 frames of the dynamic texture corresponds to 1.2 seconds, \ie, 10 frames per second. \highlight{Since the dynamic textures were collected from various sources with varying framerates, a canonical framerate had to be chosen for all input and synthesized dynamic textures. 10 frames per second was chosen to allow sufficient viewing time (1.2 seconds) while maintaining easily distinguishable dynamics.}
+Note that 12 frames of the dynamic texture corresponds to 1.2 seconds, \ie, 10 frames per second. Since the dynamic textures were collected from various sources with varying framerates, a canonical framerate was chosen for all input and synthesized dynamic textures. 10 frames per second was chosen to allow sufficient viewing time (1.2 seconds) while maintaining easily distinguishable dynamics.
 Before viewing a dynamic texture, a centred dot is flashed twice to
 indicate to the user where to look (left or right).
 To prepare users for the task, the first three comparisons 
