--- a/qualitative_results.tex
+++ b/qualitative_results.tex
@@ -2,12 +2,12 @@
 Provided in the supplemental material are videos showcasing the qualitative results of the two-stream model, including the experiments mentioned in the main manuscript. The videos are in MP4 format (H.264 codec) and are best viewed in a loop. They are enclosed in the following folders in the supplemental:
 \begin{itemize}
 	\item \path{target_textures}: This folder contains the 59 dynamic textures used as targets for synthesis.
-	\item \path{dynamic_texture_synthesis}: This folder contains synthesized dynamic textures where the appearance and dynamics targets are the same. \highlight{Specifically, it contains the folders \path{comparisons}, \path{using_concatenation_layer}, and \path{using_flow_decode_layer}.}
-	\item \path{using_concatenation_layer}: This folder contains synthesized dynamic textures where the concatenation layer was used for computing the Gram matrices on the dynamics stream. These are the results from the final model. \highlight{It contains the folders \path{appearance_stream_only}, \path{dynamics_stream_only}, \path{full_synthesis}, \path{incrementally_synthesized}, and \path{temporally_endless}.}
-	\item \path{using_flow_decode_layer}: This folder contains synthesized dynamic textures where the predicted flow output is used for computing the Gram matrices on the dynamics stream. These are the results from the baseline. \highlight{It contains the folder \path{full_synthesis}.}
+	\item \path{dynamic_texture_synthesis}: This folder contains synthesized dynamic textures where the appearance and dynamics targets are the same. Specifically, it contains the folders \path{comparisons}, \path{using_concatenation_layer}, and \path{using_flow_decode_layer}.
+	\item \path{using_concatenation_layer}: This folder contains synthesized dynamic textures where the concatenation layer was used for computing the Gram matrices on the dynamics stream. These are the results from the final model. It contains the folders \path{appearance_stream_only}, \path{dynamics_stream_only}, \path{full_synthesis}, \path{incrementally_synthesized}, and \path{temporally_endless}.
+	\item \path{using_flow_decode_layer}: This folder contains synthesized dynamic textures where the predicted flow output is used for computing the Gram matrices on the dynamics stream. These are the results from the baseline. It contains the folder \path{full_synthesis}.
 	\item \path{full_synthesis}: This folder contains regularly-synthesized dynamic textures, \ie, not incrementally-generated, nor temporally-endless, etc.
 	\item \path{appearance_stream_only}: This folder contains dynamic textures synthesized using only the appearance stream of the two-stream model. The dynamics stream is not used.
-	\item \highlight{\path{dynamics_stream_only}: This folder contains a dynamic texture synthesized using only the dynamics stream of the two-stream model. The appearance stream is not used.}
+	\item \path{dynamics_stream_only}: This folder contains a dynamic texture synthesized using only the dynamics stream of the two-stream model. The appearance stream is not used.
 	\item \path{incrementally_synthesized}: This folder contains dynamic textures synthesized using the incremental process outlined in Sec.\ \ref{sec:incremental_synthesis} in the main manuscript.
 	\item \path{temporally_endless}: This folder contains a synthesized dynamic texture (\path{smoke_plume_1}) where there is no discernible temporal seam between the last and first frames. Played as a loop, it appears to be temporally endless, thus, it is presented in animated GIF format.
 	\item \path{dynamics_style_transfer}: This folder contains synthesized dynamic textures where the appearance and dynamics targets are different. Also included are videos where the synthesized dynamic texture is ``pasted'' back onto the original image it was cropped from, showing a proof-of-concept of dynamics style transfer as an artistic tool.
