--- a/related_work.tex
+++ b/related_work.tex
@@ -8,40 +8,40 @@ related to this thesis is covered simultaneously.
 
 \section{Convolutional networks}
 
-\highlight{This section is only intended to briefly summarize convolutional networks; a more thorough overview can be found in texts (\eg, \cite{goodfellow2016}) and review articles (\eg, \cite{hadji2018}).}
+This section provides a brief summary of convolutional networks; a more thorough overview can be found in texts (\eg, \cite{goodfellow2016}) and review articles (\eg, \cite{hadji2018}).
 
-A convolutional network (ConvNet) is a \edit{high-capacity}{} feed-forward computational graph of processing nodes for approximating non-linear functions\edit{, with an inductive bias in the form of localized mappings and shared weights}{}. It is commonly used in analyzing visual imagery and is a class of artificial neural networks (ANNs), which are computational systems inspired by biological neural networks. ConvNets perform tasks (\eg, \edit{object classification}{classifying objects or regressing the angle of rotated handwritten digits}) by processing an input, $\mathbf{X} \in \mathbb{R}^{H_x \times W_x \times C_x}$, in a feed-forward manner via a series of linear and non-linear transformations and producing an output, $\mathbf{Y} \in \mathbb{R}^{H_y \times W_y \times C_y}$, relevant to the task (such as the class of an object). Here, $H_\ast \times W_\ast$ represents the spatial dimensions and $C_\ast$ represents the number of channels (\ie, the ``depth'' of the input). For example, a $3$-channel colour image input with $256 \times 256$ spatial locations is represented as $\mathbf{X} \in \mathbb{R}^{256 \times 256 \times 3}$, where each spatial location contains three pixel intensities, corresponding to the amount of intensity of the colours Red, Green, and Blue (RGB), respectively. Each non-linear transformation acts as a point of demarcation in the network known as a \emph{layer}. ConvNets typically consist of multiple layers, each containing a collection of nodes sometimes called \emph{neurons}. At each spatial-channel location of the input to a layer, a neuron computes local non-linear transformations, \eg, $\sigma(\mathbf{x}) = \max{(0, \phi(\mathbf{x}))}$ (known as the \emph{rectified linear unit} or ReLU \cite{nair2010rectified}). At a single location of the input, $\mathbf{x} \equiv (x, y, z)$, the non-linear transformation performed by this neuron produces an output called a \emph{feature activation}, $\sigma(\mathbf{x}) \in \mathbb{R}$. The set of activations produced by a neuron at every location of the input is known as an \emph{activation} or \emph{feature map}, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$. At the $l$-th layer of the network and for each location $\mathbf{x}$ of the input map, the input to each neuron is the weighted linear combination of activations from local, neighbouring neurons at the previous layer, $l-1$:
+A convolutional network (ConvNet) is a feed-forward computational graph of processing nodes for approximating non-linear functions. It is commonly used in analyzing visual imagery and is a class of artificial neural networks (ANNs), which are computational systems inspired by biological neural networks. ConvNets perform tasks (\eg, classifying objects or regressing the angle of rotated handwritten digits) by processing an input, $\mathbf{X} \in \mathbb{R}^{H_x \times W_x \times C_x}$, in a feed-forward manner via a series of linear and non-linear transformations and producing an output, $\mathbf{Y} \in \mathbb{R}^{H_y \times W_y \times C_y}$, relevant to the task (such as the class of an object). Here, $H_\ast \times W_\ast$ represents the spatial dimensions and $C_\ast$ represents the number of channels (\ie, the ``depth'' of the input). For example, a $3$-channel colour image input with $256 \times 256$ spatial locations is represented as $\mathbf{X} \in \mathbb{R}^{256 \times 256 \times 3}$, where each spatial location contains three pixel intensities, corresponding to the amount of intensity of the colours Red, Green, and Blue (RGB), respectively. Each non-linear transformation acts as a point of demarcation in the network known as a \emph{layer}. ConvNets typically consist of multiple layers, each containing a collection of nodes sometimes called \emph{neurons}. At each spatial-channel location of the input to a layer, a neuron computes local non-linear transformations, \eg, $\bar{\phi}(\mathbf{x}) = \max{(0, \phi(\mathbf{x}))}$ (known as the \emph{rectified linear unit} or ReLU \cite{nair2010rectified}). At a single location of the input, $\mathbf{x} \equiv (x, y, z)$, the non-linear transformation performed by this neuron produces an output called a \emph{feature activation}, $\bar{\phi}(\mathbf{x}) \in \mathbb{R}$. The set of activations produced by a neuron at every location of the input is known as an \emph{activation} or \emph{feature map}, $\bar{\phi} \in \mathbb{R}^{H_{\bar{\phi}} \times W_{\bar{\phi}} \times C_{\bar{\phi}}}$. At the $l$-th layer of the network and for each location $\mathbf{x}$ of the input map, the input to each neuron is the weighted linear combination of activations from local, neighbouring neurons at the previous layer, $l-1$:
 \begin{equation}
 	\begin{aligned}
-		\phi^l(\mathbf{x}) &= \left(\mathbf{w}^l * \sigma^{l-1}(\mathbf{x})\right) + b^l\\
-		&= \left(\sum_{(i, j, k) \in \Omega} \mathbf{w}^l(i, j, k) \sigma^{l-1}(x - i, y - j, z - k)\right) + b^l\ ,
+		\phi^l(\mathbf{x}) &= \left(\mathbf{w}^l * \bar{\phi}^{l-1}(\mathbf{x})\right) + b^l\\
+		&= \left(\sum_{(i, j, k) \in \Omega} \mathbf{w}^l(i, j, k) \bar{\phi}^{l-1}(x - i, y - j, z - k)\right) + b^l\ ,
 	\end{aligned}
 \end{equation}
-where $\mathbf{w}^l$ are the \emph{weights} (or \emph{filter}) applied to the input $\sigma^{l-1}(\mathbf{x})$, $\Omega$ is a spatial-channel neighbourhood centered about $\mathbf{x}$, $b^l$ is an offset term known as the \emph{bias}, and $\ast$ represents the \emph{convolution} (or \emph{filtering}) operator. Colloquially, the term ``convolution'' is often used to describe the combined process of convolving over an input and subsequently computing its activation. Convolutions are performed at each location of the input, operating on a localized area of influence called its \emph{receptive field}. \edit{Unique to ConvNets,}{ConvNets are distinguished from most other ANNs in that} the weights associated with a convolution are shared across the entire input. Specifically, when convolving over an input, instead of using a unique filter for each location, the same filter is reused---this is called \emph{weight sharing}. The idea is that if a filter is important for capturing a feature (\eg, edge, corner, face, etc.) at a particular location, then it is assumed that the filter is important at other locations as well since the same feature may appear elsewhere.
-At the base of the ConvNet, inputs are typically images while inputs at intermediate layers are activation maps (\eg, $\sigma \in \mathbb{R}^{H_\sigma \times W_\sigma \times C_\sigma}$). 
+where $\mathbf{w}^l$ are the \emph{weights} (or \emph{filter}) applied to the input $\bar{\phi}^{l-1}(\mathbf{x})$, $\Omega$ is a spatial-channel neighbourhood centered about $\mathbf{x}$, $b^l$ is an offset term known as the \emph{bias}, and $\ast$ represents the \emph{convolution} (or \emph{filtering}) operator. Colloquially, the term ``convolution'' is often used to describe the combined process of convolving over an input and subsequently computing its activation. Convolutions are performed at each location of the input, operating on a localized area of influence called its \emph{receptive field}. ConvNets are distinguished from most other ANNs in that the weights associated with a convolution are shared across the entire input. Specifically, when convolving over an input, instead of using a unique filter for each location, the same filter is reused---this is called \emph{weight sharing}. The idea is that if a filter is important for capturing a feature (\eg, edge, corner, face, etc.) at a particular location, then it is assumed that the filter is important at other locations as well since the same feature may appear elsewhere.
+At the base of the ConvNet, inputs are typically images while inputs at intermediate layers are activation maps (\eg, $\bar{\phi} \in \mathbb{R}^{H_{\bar{\phi}} \times W_{\bar{\phi}} \times C_{\bar{\phi}}}$). 
 
-\subsubsection{\highlight{Pooling}}
+\subsubsection{Pooling}
 
-\highlight{ConvNets commonly include \emph{pooling} layers that combine regions of activations into a single activation in the next layer. There are two commonly used types of pooling: \emph{average pooling}, which uses the average value from each of region of activations at the previous layer, and \emph{max pooling}, which uses the max value instead. Pooling provides a degree of translation-invariance to ConvNets by making them less affected by small changes in the positions of input activations. It is typically followed by a downsample operation to reduce spatial resolution.}
+ConvNets commonly include \emph{pooling} layers that combine regions of activations into a single activation in the next layer. There are two commonly used types of pooling: \emph{average pooling}, which uses the average value from each of region of activations at the previous layer, and \emph{max pooling}, which uses the max value instead. Pooling provides a degree of translation-invariance to ConvNets by making them less affected by small changes in the positions of input activations. It is typically followed by a downsample operation to reduce spatial resolution.
 
-\subsubsection{\highlight{Normalization}}
+\subsubsection{Normalization}
 
-\highlight{Widely used in ConvNets are \emph{normalization} layers that serve to inhibit or bind local activations to a certain range. Normalization is typically done across channels, such as with the commonly used \emph{divisive normalization}:
+Widely used in ConvNets are \emph{normalization} layers that serve to inhibit or bind local activations to a certain range. Normalization is typically done across channels, such as with the commonly used \emph{divisive normalization}:
 \begin{equation}
-	\sigma^l_i(\mathbf{x}) = \frac{\sigma^l_i(\mathbf{x})}{\sum_{j=1}^{C}{\sigma^l_j(\mathbf{x})} + \epsilon}\ ,
+	\hat{\phi}^l_i(\mathbf{x}) = \frac{\bar{\phi}^l_i(\mathbf{x})}{\sum_{j=1}^{C}{\bar{\phi}^l_j(\mathbf{x})} + \epsilon}\ ,
 \end{equation}
-where $\sigma^l_i(\mathbf{x})$ is an activation from the $i$-th channel at spatial position $\mathbf{x}$, $C$ is the total number of channels, and $\epsilon$ is a small value to prevent division by zero.
-An issue with using unbounded activation functions (\eg, ReLU) with convolutions in a ConvNet is that their outputs keep increasing with increasing contrast of the input. This dependency on contrast magnitude makes it difficult to determine whether a high response is indicative of a salient feature or high input contrast. Thus, divisive normalization binds unbounded activations across channels such that information about the magnitude of contrast is discarded in favour of a representation based only on relative variations in contrast across input activations, \ie, the underlying feature patterns of the input.}
+where $\bar{\phi}^l_i(\mathbf{x})$ is an activation from the $i$-th channel at spatial position $\mathbf{x}$, $C$ is the total number of channels, and $\epsilon$ is a small value to prevent division by zero.
+An issue with using unbounded activation functions (\eg, ReLU) with convolutions in a ConvNet is that their outputs keep increasing with increasing contrast of the input. This dependency on contrast magnitude makes it difficult to determine whether a high response is indicative of a salient feature or high input contrast. Thus, divisive normalization binds unbounded activations across channels such that information about the magnitude of contrast is discarded in favour of a representation based only on relative variations in contrast across input activations, \ie, the underlying feature patterns of the input.
 
 \subsubsection{Training a convolutional network}
 
-ConvNets ``learn'' to perform tasks through an iterative process called \emph{training}, which involves optimizing their weights based on an objective over training data (\eg, input images with corresponding expected outputs). At each iteration, an input is fed through the network to produce an output \edit{which}{that} is subsequently evaluated against the expected, \ie, groundtruth, output for the given input. This evaluation is known as the \emph{loss function} and represents the network's performance on the task. Implicitly, it also represents the objective the network must achieve, \eg, minimizing classification \highlight{or regression error}. Starting from the loss, the network adjusts its weights and biases at each layer via the gradient of the loss with respect to the weights and biases at that layer. \highlight{The adjustment of weights and biases via the gradient of the loss function is called \emph{backpropagation} \cite{goodfellow2016}.} After a suitable amount of training iterations, this \emph{gradient descent} process is terminated.
+ConvNets ``learn'' to perform tasks through an iterative process called \emph{training}, which involves optimizing their weights based on an objective over training data (\eg, input images with corresponding expected outputs). At each iteration, an input is fed through the network to produce an output that is subsequently evaluated against the expected, \ie, groundtruth, output for the given input. This evaluation is known as the \emph{loss function} and represents the network's performance on the task. Implicitly, it also represents the objective the network must achieve, \eg, minimizing classification or regression error. Starting from the loss, the network adjusts its weights and biases at each layer via the gradient of the loss with respect to the weights and biases at that layer. The adjustment of weights and biases via the gradient of the loss function is called \emph{backpropagation} \cite{goodfellow2016}. After a suitable amount of training iterations, this \emph{gradient descent} process is terminated.
 
-\subsection{\highlight{Two-stream convolutional networks}}
+\subsection{Two-stream convolutional networks}
 
-\highlight{Two-stream ConvNets \cite{simonyan2014,feichtenhofer2016two} are a class of ConvNets that separate processing of input into two recognition streams (spatial and temporal), each with its own task. They are related to the two-stream hypothesis \cite{goodale1992} that models the human visual cortex in terms of two pathways, the ventral stream (involved with object recognition) and the dorsal stream (involved with motion processing).}
+In the context of video analysis, two-stream ConvNets \cite{simonyan2014,feichtenhofer2016two} are a class of ConvNets that separate processing of input temporal imagery into two recognition streams (spatial and temporal), each with its own task. They are inspired by the two-stream hypothesis \cite{goodale1992} that models the human visual cortex in terms of two pathways, the ventral stream (involved with object recognition) and the dorsal stream (involved with motion processing).
 
-\highlight{Both streams are implemented as ConvNets with the overall intent to decouple processing of spatial and temporal information. This decoupling allows each network to be trained on separate tasks, \eg, the spatial ConvNet can be trained on object recognition and the temporal ConvNet can be trained on motion recognition. Furthermore, the decoupled spatial ConvNet can take advantage of the availability of large amounts of annotated image data (\eg, ImageNet dataset \cite{russakovsky2015}) for training. Significantly, two-stream ConvNets have been successfully used for video understanding tasks in computer vision, with particular attention to action recognition \cite{simonyan2014,feichtenhofer2016two}.}
+Both streams are implemented as ConvNets with the overall intent to decouple processing of spatial and temporal information. This decoupling allows each network to be trained on separate tasks, \eg, the spatial ConvNet can be trained on object recognition and the temporal ConvNet can be trained on motion recognition. Furthermore, the decoupled spatial ConvNet can take advantage of the availability of large amounts of annotated image data for training, \eg, the ImageNet dataset \cite{russakovsky2015}. Two-stream ConvNets have been successfully used for video understanding tasks in computer vision, with particular attention to action recognition \cite{simonyan2014,feichtenhofer2016two}.
 
 \section{Parametric texture synthesis}
 
@@ -71,7 +71,7 @@ to match the filter response statistics of an input texture.
 More recently, Gatys \etal \cite{gatys2015} demonstrated
 impressive results by replacing the handcrafted linear filter bank with the learned filters from the VGG-19
 \cite{simonyan2014very} ConvNet pre-trained on the ImageNet \cite{russakovsky2015} dataset for the task of object
-recognition. \edit{This ConvNet, in effect, served as a proxy for the ventral visual processing stream.}{}
+recognition.
 Textures were modelled in terms of the normalized correlations between activation maps within several layers of the network.
 
 \subsection{Texture synthesis using a convolutional network}
@@ -105,8 +105,8 @@ the Gram matrices of the target texture and that of the synthesized texture:
 \end{equation}
 where $L$ is the number of ConvNet layers used when computing Gram matrices
 and $\Vert \cdot \Vert_F$ is the Frobenius norm. In the case of Gatys \etal \cite{gatys2015}, Gram matrices were computed on
-layers \emph{conv1\_1}, \emph{pool1}, \emph{pool2}, \emph{pool3}, and \emph{pool4}.
-\highlight{To note, the Gram matrix is positive semidefinite and thus exists in a non-Euclidean space. Non-Euclidean metrics (\eg, the Log-Euclidean \cite{arsigny2006}) may be more suitable than the Frobenius norm, however, the Frobenius norm was used here for its ease of implementation. This may be worth exploring for future work.}
+layers \emph{conv1\_1}, \emph{pool1}, \emph{pool2}, \emph{pool3}, and \emph{pool4}. Through systematic evaluation, they reported these layers to be qualitatively superior to other layer subsets for texture synthesis.
+To note, the Gram matrix is positive semidefinite and thus exists in a non-Euclidean space. Non-Euclidean metrics (\eg, the Log-Euclidean \cite{arsigny2006}) may be more suitable than the Frobenius norm, however, following Gatys \etal's \cite{gatys2015} implementation, the Frobenius norm is used here instead. Gatys \etal did not investigate using other metrics, so this may be worth exploring for future work.
 
 Before synthesizing a texture, an initial forward pass through the ConvNet is
 performed with the target texture as input. The target texture's Gram matrices
@@ -190,15 +190,15 @@ At the other extreme of Fig.\ \ref{fig:dynamics_representations}, a two-dimensio
 \input{fig_optical_flow}
 The recovery of optical flow from temporal imagery has long been studied in computer vision. Traditionally, it has been addressed by handcrafted approaches \eg, \cite{horn1981,lucas1981,revaud2015epicflow}. Recently, ConvNet approaches have been demonstrated as viable alternatives \cite{dosovitskiy2015,ilg2017,ranjan2017,yu2016}.
 
-A limitation of optical flow is its reliance on a single coherent movement for each pixel and its underlying assumption on brightness constancy, which is difficult to justify for the spectrum of dynamics one encounters in the real world. Examples of dynamics that optical flow \edit{would fail}{fails} to capture include flickering, semi-transparent motion, and stochastic dynamics. These are some of the dynamics typically exhibited by dynamic textures. Therefore, optical flow is not \edit{an}{a} suitable substrate for representing the spectrum of dynamics in dynamic textures.
+A limitation of optical flow is its reliance on a single coherent movement for each pixel and its underlying assumption on brightness constancy, which is difficult to justify for the spectrum of dynamics one encounters in the real world. Examples of dynamics that optical flow fails to capture include flickering, semi-transparent motion, and stochastic dynamics. These are some of the dynamics typically exhibited by dynamic textures. Therefore, optical flow is not a suitable substrate for representing the spectrum of dynamics in dynamic textures.
 
 \subsection{Marginalized spacetime oriented energies}
 \label{sec:msoe}
 
-\edit{At the midpoint between}{Between} the two extremes lies the representation of dynamics that aims to capture a distribution of measurements of spacetime orientations in the input temporal imagery.
-Unlike flow-based analyses \edit{which}{that} focus on the apparent motion (\ie, translation) present in the data, measurements of spacetime orientations take a geometric and generalized approach in capturing \emph{spacetime structures}: oriented structures in the spatiotemporal domain that manifest themselves as motion or non-motion, \eg, flickering, stochastic dynamics, etc.
+Between the two extremes lies the representation of dynamics that aims to capture a distribution of measurements of spacetime orientations in the input temporal imagery.
+Unlike flow-based analyses that focus on the apparent motion (\ie, translation) present in the data, measurements of spacetime orientations take a geometric and generalized approach in capturing \emph{spacetime structures}: oriented structures in the spatiotemporal domain that manifest themselves as motion or non-motion, \eg, flickering, stochastic dynamics, etc.
 
-Previous \edit{works}{work} \cite{adelson1985spatiotemporal,fahle1981,heeger1988,simoncelli1998,watson1983,nishimoto2011,derpanis2012spacetime} \edit{have}{has} shown that the velocity of image content (\ie, motion) can be interpreted as a 3D oriented structure in the $x$-$y$-$t$ spatiotemporal domain. Furthermore, in the frequency domain, the signal energy of these oriented structures lie on a plane through the origin where the slant of the plane is defined by the velocity of the image content.
+Previous work \cite{adelson1985spatiotemporal,fahle1981,heeger1988,simoncelli1998,watson1983,nishimoto2011,derpanis2012spacetime} has shown that the velocity of image content (\ie, motion) can be interpreted as a 3D oriented structure in the $x$-$y$-$t$ spatiotemporal domain. Furthermore, in the frequency domain, the signal energy of these oriented structures lie on a plane through the origin where the slant of the plane is defined by the velocity of the image content.
 For example, in the case where a spacetime structure is defined by the image velocity $(u, v)^\top$, the unit normal of the plane is given by $\hat{\mathbf{n}}=(u, v, 1)^\top / ||(u, v, 1)^\top||$.
 Hence, energy models of visual motion, like those presented in these works, are described as ``oriented energy'' or ``motion energy'' models, and they attempt to identify this orientation-plane (and hence the pattern's velocity) via a set of image filtering operations. Specifically, given an input image sequence, these models consist of an alternating sequence of linear and non-linear operations that yield a distributed representation (\ie,  implicitly coded) of pixelwise
 optical flow. These models have been motivated and studied in a variety of contexts, including computer vision, visual neuroscience, and visual psychology
@@ -230,7 +230,7 @@ structure:
 \begin{equation}
 	\bar{E}_{\hat{\theta}} = \sum_{(x, y, t) \in \Omega}{{E_{\hat{\theta}}(x, y, t)}^2}\ .
 \end{equation}
-At this point, each oriented energy measurement includes measurement of spatial orientation. This means that spatial image structures will affect the responses of the bank of oriented filters, making them dependent on spatial appearance. This \highlight{dependence} is unwanted as \edit{this}{it} can occur at an otherwise coherent dynamic region, \eg, a surface with varying spatial appearance exhibiting a single, dominant motion. Thus, a description consisting purely of pattern dynamics is sought.
+At this point, each oriented energy measurement includes measurement of spatial orientation. This means that spatial image structures will affect the responses of the bank of oriented filters, making them dependent on spatial appearance. This dependence is unwanted as it can occur at an otherwise coherent dynamic region, \eg, a surface with varying spatial appearance exhibiting a single, dominant motion. Thus, a description consisting purely of pattern dynamics is sought.
 To remove this difficulty, the spatial orientation component of each filter is discounted via ``marginalization''. Specifically, filter responses consistent with the same temporal orientation (not necessarily the same spatial orientation), $\hat{\theta}_i$, are summed:
 \begin{equation}
 	E_{\hat{\mathbf{n}}} = \sum_{i = 1}^{N}{E_{\hat{\theta}_i}}\ ,
@@ -254,4 +254,4 @@ spacetime orientation:
 \begin{equation}
 	\hat{E}_{\hat{\mathbf{n}}_i} = \frac{E_{\hat{\mathbf{n}}_i}}{\sum_{j = 1}^{M}{E_{\hat{\mathbf{n}}_j}} + \epsilon} \ ,
 \end{equation}
-where $\hat{E}_{\hat{\mathbf{n}}_i}$ denotes an oriented filter response from Eq.\ \ref{eq:oriented_filter_2.8} corresponding to a plane in frequency-space with unit normal $\hat{\mathbf{n}}_i$\highlight{, and $\epsilon$ is a small value (\eg, $1\mathrm{e}{-12}$) to avoid division by zero}.
+where $\hat{E}_{\hat{\mathbf{n}}_i}$ denotes an oriented filter response from Eq.\ \ref{eq:oriented_filter_2.8} corresponding to a plane in frequency-space with unit normal $\hat{\mathbf{n}}_i$, and $\epsilon$ is a small value (\eg, $1\mathrm{e}{-12}$) to avoid division by zero.
