--- a/fig_funke_comparison.tex
+++ b/fig_funke_comparison.tex
@@ -12,7 +12,7 @@
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
-\caption[Qualitative comparison with Funke \etal's \cite{funke2017} model]{Qualitative comparison with Funke \etal's \cite{funke2017} model on one of the sequences used in their work. Note that this sequence does not follow the thesis' assumption of a dynamic texture\highlight{, in the sense that the appearance and/or dynamics are not spatiotemporally homogeneous}.
+\caption[Qualitative comparison with Funke \etal's \cite{funke2017} model]{Qualitative comparison with Funke \etal's \cite{funke2017} model on one of the sequences used in their work. Note that this sequence does not follow the thesis' assumption of a dynamic texture, in the sense that the appearance and/or dynamics are not spatiotemporally homogeneous.
 (top row) Target sequence.
 (middle row)
 Dynamic texture synthesis when using Funke \etal's model. The model fails to capture the up-right motion of the leaves.
